--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-/.idea
 /node_modules
-/public/css
-/public/js
-/public/mix-manifest.json
 /public/hot
 /public/storage
 /storage/*.key
@@ -14,3 +10,5 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+/.idea
+/public
