--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /node_modules
+/public/css
+/public/js
 /public/hot
 /public/storage
 /storage/*.key
@@ -11,4 +13,3 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
-/public
